fixed sideways scrollbar, properly adding to favourites, finished Favourites and forecast for Cities

--- a/src/styles/Computer.css
+++ b/src/styles/Computer.css
@@ -47,14 +47,15 @@
 
     .forecast-container {
         display: grid;
-        /* grid-template-columns: 1fr 1fr 1fr 1fr 1fr; */
-        grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
+        grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: repeat(1fr);
         gap: 2rem;
         padding: 5rem;
+        margin-bottom: 5rem;
     }
 
     .city-container {
+        margin: 0 auto;
         text-align: center;
         width: 25rem;
         border: 4px solid var(--color-primary);
@@ -87,6 +88,20 @@
         }
     }
 
+    .favs-container {
+        margin: auto;
+        font-size: 2rem;
+        table {
+            margin: 2rem auto;
+
+            tr {
+                td {
+                    padding: 1rem;
+                }
+            }
+        }
+    }
+
     .footer {
         position: fixed;
         left: 0;
@@ -97,3 +112,12 @@
         color: var(--color-background);
     }
 }
+
+/* 
+    --color-primary: #2d2a32;
+    --color-secondary: #eae151;
+    --color-accent: #ddd92a;
+    --color-background: #fafdf6;
+    --color-font-primary: #fafdf6;
+    --color-font-secondary: #2d2a32;
+*/
