--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -51,7 +51,7 @@ html {
 /* USTAWIENIA GLOBALNE, RUSZAC W OSTATECZNOSCI */
 body {
     margin: 0;
-    width: 100vw;
+    max-width: 100vw;
     min-height: fit-content;
     background-color: var(--color-background);
 }
@@ -92,4 +92,8 @@ span {
 
 .bi:hover {
     color: var(--color-accent);
+}
+
+.bi-trash3-fill:hover {
+    color: red;
 }
